Commiting changes of seo in pages

--- a/pages/aisurveillance.html
+++ b/pages/aisurveillance.html
@@ -4,79 +4,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Enhance your security with AI-powered surveillance systems. Real-time monitoring, intelligent threat detection, and cloud integration by Swin Security.">
+    <meta property="og:title" content="AI Surveillance - SwinSecurity">
+    <meta property="og:description" content="Harness the power of AI to enhance security with smart cameras, real-time analytics, and cloud integration for seamless surveillance.">
+    <meta property="og:image" content="https://yoursite.com/images/ai-surveillance.jpg">
+    <meta property="og:url" content="https://yoursite.com/pages/aisurveillance.html">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="AI Surveillance - SwinSecurity">
+    <meta name="twitter:description" content="AI-powered surveillance solutions for real-time threat detection and seamless cloud integration.">
+    <meta name="twitter:image" content="https://yoursite.com/images/ai-surveillance.jpg">
+
     <title>AI Surveillance - SwinSecurity</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/critical.css">
     <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <img src="../images/Swin_security.webp" alt="Swin Security" height="60">
-        </div>
-
-        <ul class="nav-links">
-            <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
-                        class="fas fa-chevron-down"></i></a>
-                <ul class="dropdown-menu">
-                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
-                    <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
-                    <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
-                    <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
-                    <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
-                </ul>
-            </li>
-            <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-        </ul>
-
-        <i class="fas fa-bars hamburger"></i>
-    </nav>
-
-    <section class="aisurveillance-page">
-        <div class="aisurveillance-hero">
-            <i class="fas fa-camera"></i>
-            <h1>AI Surveillance</h1>
-            <p>Harness the power of artificial intelligence to enhance security with real-time monitoring and
-                intelligent threat detection.</p>
-        </div>
-        <div class="aisurveillance-features">
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s=" alt="AI Camera">
-                <h3>Smart Cameras</h3>
-                <p>Advanced cameras with facial recognition and motion tracking for precise monitoring.</p>
-                <a href="#learn-more">Learn More</a>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="../images/Swin_security.webp" alt="Swin Security Logo" height="60">
             </div>
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k=" alt="AI Analytics">
-                <h3>Real-Time Analytics</h3>
-                <p>Instant data processing to detect anomalies and alert security teams.</p>
-                <a href="#learn-more">Learn More</a>
+
+            <ul class="nav-links">
+                <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cogs"></i>Our Solutions <i class="fas fa-chevron-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+                        <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
+                        <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
+                        <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
+                        <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
+                    </ul>
+                </li>
+                <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+            </ul>
+
+            <i class="fas fa-bars hamburger" aria-label="Navigation Menu"></i>
+        </nav>
+    </header>
+
+    <main>
+        <section class="aisurveillance-page">
+            <div class="aisurveillance-hero">
+                <i class="fas fa-camera" aria-hidden="true"></i>
+                <h1>AI Surveillance</h1>
+                <p>Harness the power of artificial intelligence to enhance security with real-time monitoring and intelligent threat detection.</p>
             </div>
-            <div class="aisurveillance-feature-card">
-                <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s=" alt="Cloud Integration">
-                <h3>Cloud Integration</h3>
-                <p>Seamless cloud storage for secure, accessible footage anytime, anywhere.</p>
-                <a href="#learn-more">Learn More</a>
+            <div class="aisurveillance-features">
+                <div class="aisurveillance-feature-card">
+                    <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s=" alt="AI Camera with facial recognition and motion tracking">
+                    <h2>Smart Cameras</h2>
+                    <p>Advanced cameras with facial recognition and motion tracking for precise monitoring.</p>
+                    <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
+                </div>
+                <div class="aisurveillance-feature-card">
+                    <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k=" alt="Real-time AI analytics with data processing">
+                    <h2>Real-Time Analytics</h2>
+                    <p>Instant data processing to detect anomalies and alert security teams.</p>
+                    <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
+                </div>
+                <div class="aisurveillance-feature-card">
+                    <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s=" alt="Cloud integration for video footage storage">
+                    <h2>Cloud Integration</h2>
+                    <p>Seamless cloud storage for secure, accessible footage anytime, anywhere.</p>
+                    <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
+
     <footer class="footer-section">
         <div class="footer-container">
-            <!-- Company Info -->
             <div class="footer-column">
                 <h3>Swin Security</h3>
                 <p>Protecting your world with cutting-edge security solutions.</p>
-                <p>Email: info@swinsecurity.com</p>
+                <p>Email: <a href="mailto:info@swinsecurity.com">info@swinsecurity.com</a></p>
                 <p>Phone: +1 (800) 123-4567</p>
                 <p>Address: 123 Secure St, Safety City, SC 12345</p>
             </div>
-            <!-- Quick Links -->
+
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul>
@@ -87,18 +98,18 @@
                     <li><a href="../pages/contact.html">Contact Us</a></li>
                 </ul>
             </div>
-            <!-- Social Media -->
-            <!-- Social Media -->
+
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Twitter"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Follow us on Twitter" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                    <a href="https://linkedin.com" title="Follow us on LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Follow us on Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
+
     <script src="../js/main.js"></script>
 </body>
 
