--- a/pages/gateautomation.html
+++ b/pages/gateautomation.html
@@ -2,145 +2,143 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/critical.css">
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <title>Gate Automation Solutions | Swin Security</title>
+  <meta name="description" content="Enhance your property's security and convenience with residential and commercial gate automation solutions by Swin Security using brands like BFT, FAAC, and CAME." />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Gate Automation Solutions | Swin Security" />
+  <meta property="og:description" content="Discover advanced gate automation systems for residential and commercial properties. Trusted brands, expert service." />
+  <meta property="og:image" content="https://example.com/images/BENINCA%20gate.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yoursite.com/pages/gateautomation.html" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Gate Automation Solutions | Swin Security" />
+  <meta name="twitter:description" content="Explore our secure and efficient gate automation systems designed for all types of properties." />
+  <meta name="twitter:image" content="https://example.com/images/BENINCA%20gate.jpg" />
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../css/critical.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo">
-            <img src="../images/Swin_security.webp" alt="Swin Security" height="60">
-        </div>
+  <nav class="navbar" role="navigation" aria-label="Main navigation">
+    <div class="logo">
+      <img src="../images/Swin_security.webp" alt="Swin Security Logo" height="60" loading="lazy" />
+    </div>
 
-        <ul class="nav-links">
-            <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
-                        class="fas fa-chevron-down"></i></a>
-                <ul class="dropdown-menu">
-                    <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
-                    <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
-                    <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
-                    <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
-                    <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
-                </ul>
-            </li>
-            <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+    <ul class="nav-links">
+      <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i></a>
+        <ul class="dropdown-menu">
+          <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
+          <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
+          <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
+          <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
+          <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
         </ul>
+      </li>
+      <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+    </ul>
 
-        <i class="fas fa-bars hamburger"></i>
-    </nav>
-    <!-- Existing Hero Section -->
-    <section class="gateautomation-page-hero">
-        <div class="gateautomation-page-hero-text">
-            <h1>Gate Automation</h1>
-            <p>
-                Gate Automation systems provide a seamless, secure, and efficient way to control access to your
-                property.
-                Whether you're looking for residential or commercial solutions, we offer industry-leading brands like
-                BFT, FAAC,
-                CAME, Centurion, and Beninca. These systems are designed to enhance safety, convenience, and
-                reliability, ensuring
-                that your gates open and close with precision and ease. From automatic gates to advanced access control,
-                our systems
-                deliver the highest level of performance. Secure your property today with the best automation solutions
-                available in the market.
-            </p>
-        </div>
-    </section>
+    <i class="fas fa-bars hamburger" aria-label="Toggle navigation menu"></i>
+  </nav>
 
-<!-- New Section with 4 divs -->
-<section class="gateautomation-page-automation-info">
+  <!-- Hero Section -->
+  <section class="gateautomation-page-hero">
+    <div class="gateautomation-page-hero-text">
+      <h1>Gate Automation</h1>
+      <p>
+        Gate Automation systems provide a seamless, secure, and efficient way to control access to your property. Whether you're looking for residential or commercial solutions, we offer industry-leading brands like BFT, FAAC, CAME, Centurion, and Beninca. These systems are designed to enhance safety, convenience, and reliability, ensuring that your gates open and close with precision and ease. From automatic gates to advanced access control, our systems deliver the highest level of performance. Secure your property today with the best automation solutions available in the market.
+      </p>
+    </div>
+  </section>
+
+  <!-- New Section with 4 Divs -->
+  <section class="gateautomation-page-automation-info">
     <div class="gateautomation-page-info-item">
-        <div class="gateautomation-page-info-text">
-            <h2>Residential Solutions</h2>
-            <p>Our residential gate automation systems bring convenience, safety, and modern functionality to your home. 
-               We install and maintain swing and sliding gate systems, using trusted brands like BFT, FAAC, CAME, CENTURION, and BENINCA, ensuring smooth access and security.</p>
-        </div>
-        <div class="gateautomation-page-info-image">
-            <img src="../images/BENINCA gate.jpg"
-                alt="Residential Gate Automation">
-        </div>
+      <div class="gateautomation-page-info-text">
+        <h2>Residential Solutions</h2>
+        <p>Our residential gate automation systems bring convenience, safety, and modern functionality to your home. We install and maintain swing and sliding gate systems, using trusted brands like BFT, FAAC, CAME, CENTURION, and BENINCA, ensuring smooth access and security.</p>
+      </div>
+      <div class="gateautomation-page-info-image">
+        <img src="../images/BENINCA gate.jpg" alt="Modern residential gate automated with Beninca system" loading="lazy" />
+      </div>
     </div>
 
     <div class="gateautomation-page-info-item">
-        <div class="gateautomation-page-info-text">
-            <h2>Commercial Solutions</h2>
-            <p>For commercial premises, we provide robust gate automation solutions including swing, sliding gates, and boom barriers. 
-               Our systems support high-traffic environments and integrate seamlessly with advanced access control for complete security coverage.</p>
-        </div>
-        <div class="gateautomation-page-info-image">
-            <img src="../images/sliding gate corporation.jpg"
-                alt="Commercial Gate Automation">
-        </div>
+      <div class="gateautomation-page-info-text">
+        <h2>Commercial Solutions</h2>
+        <p>For commercial premises, we provide robust gate automation solutions including swing, sliding gates, and boom barriers. Our systems support high-traffic environments and integrate seamlessly with advanced access control for complete security coverage.</p>
+      </div>
+      <div class="gateautomation-page-info-image">
+        <img src="../images/sliding gate corporation.jpg" alt="Commercial sliding gate automation system" loading="lazy" />
+      </div>
     </div>
 
     <div class="gateautomation-page-info-item">
-        <div class="gateautomation-page-info-text">
-            <h2>Advanced Security</h2>
-            <p>We integrate gate automation with surveillance cameras, alarms, and access control systems (keypads, RFID, biometric readers) to provide a unified and secure environment.
-               Our solutions are ideal for residential, commercial, and industrial settings.</p>
-        </div>
-        <div class="gateautomation-page-info-image">
-            <img src="../images/access control gate.jpg"
-                alt="Gate Security Systems">
-        </div>
+      <div class="gateautomation-page-info-text">
+        <h2>Advanced Security</h2>
+        <p>We integrate gate automation with surveillance cameras, alarms, and access control systems (keypads, RFID, biometric readers) to provide a unified and secure environment. Our solutions are ideal for residential, commercial, and industrial settings.</p>
+      </div>
+      <div class="gateautomation-page-info-image">
+        <img src="../images/access control gate.jpg" alt="Access-controlled automated gate with keypad and RFID" loading="lazy" />
+      </div>
     </div>
 
     <div class="gateautomation-page-info-item">
-        <div class="gateautomation-page-info-text">
-            <h2>Maintenance & Support</h2>
-            <p>We provide full-service support for gate automation systems, including troubleshooting, upgrades, and regular maintenance. 
-               With over 8 years of experience, we ensure systems are always running at peak performance with responsive, expert service.</p>
-        </div>
-        <div class="gateautomation-page-info-image">
-            <img src="../images/gate maintenance.jpg"
-                alt="Gate Maintenance Support">
-        </div>
+      <div class="gateautomation-page-info-text">
+        <h2>Maintenance & Support</h2>
+        <p>We provide full-service support for gate automation systems, including troubleshooting, upgrades, and regular maintenance. With over 8 years of experience, we ensure systems are always running at peak performance with responsive, expert service.</p>
+      </div>
+      <div class="gateautomation-page-info-image">
+        <img src="../images/gate maintenance.jpg" alt="Technician maintaining an automated gate system" loading="lazy" />
+      </div>
     </div>
-</section>
+  </section>
 
-    <footer class="footer-section">
-        <div class="footer-container">
-            <!-- Company Info -->
-            <div class="footer-column">
-                <h3>Swin Security</h3>
-                <p>Protecting your world with cutting-edge security solutions.</p>
-                <p>Email: info@swinsecurity.com</p>
-                <p>Phone: +1 (800) 123-4567</p>
-                <p>Address: 123 Secure St, Safety City, SC 12345</p>
-            </div>
-            <!-- Quick Links -->
-            <div class="footer-column">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../index.html#ourSolution">Our Solutions</a></li>
-                    <li><a href="../index.html#whyUs">Why Choose Us</a></li>
-                    <li><a href="../index.html#ourPartners">Technology Partners</a></li>
-                    <li><a href="../pages/contact.html">Contact Us</a></li>
-                </ul>
-            </div>
-            <!-- Social Media -->
-            <!-- Social Media -->
-            <div class="footer-column">
-                <h3>Follow Us</h3>
-                <div class="footer-social">
-                    <a href="https://twitter.com" title="Twitter"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-                </div>
-            </div>
+  <footer class="footer-section" role="contentinfo">
+    <div class="footer-container">
+      <div class="footer-column">
+        <h3>Swin Security</h3>
+        <p>Protecting your world with cutting-edge security solutions.</p>
+        <p>Email: <a href="mailto:info@swinsecurity.com">info@swinsecurity.com</a></p>
+        <p>Phone: <a href="tel:+18001234567">+1 (800) 123-4567</a></p>
+        <p>Address: 123 Secure St, Safety City, SC 12345</p>
+      </div>
+
+      <div class="footer-column">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html#ourSolution">Our Solutions</a></li>
+          <li><a href="../index.html#whyUs">Why Choose Us</a></li>
+          <li><a href="../index.html#ourPartners">Technology Partners</a></li>
+          <li><a href="./contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-column">
+        <h3>Follow Us</h3>
+        <div class="footer-social">
+          <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
         </div>
-    </footer>
-    <script src="../js/main.js"></script>
+      </div>
+    </div>
+  </footer>
+
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
