--- a/pages/about.html
+++ b/pages/about.html
@@ -2,147 +2,96 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about Page</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Us | Swin Security - Trusted Security Experts</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Learn about Swin Security – experts in CCTV, alarm systems, smart locks, and access control. Discover our mission, leadership, and certifications.">
+    <meta name="keywords" content="About Swin Security, security solutions, CCTV experts, alarm systems, smart locks, CEO, certifications">
+    <meta name="author" content="Swin Security">
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/critical.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
-        <nav class="navbar">
+    <!-- Navbar -->
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
         <div class="logo">
-            <img src="../images/Swin_security.webp" alt="Swin Security" height="60">
+            <img src="../images/Swin_security.webp" alt="Swin Security Logo" height="60">
         </div>
-
         <ul class="nav-links">
             <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
-                        class="fas fa-chevron-down"></i></a>
+                <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i>
+                </a>
                 <ul class="dropdown-menu">
                     <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
                     <li><a href="./accesscontrol.html"><i class="fas fa-lock"></i> Access Control</a></li>
                     <li><a href="./aisurveillance.html"><i class="fas fa-video"></i> AI Surveillance</a></li>
-                    <li><a href="./smarthome.html"><i class="fas fa-home-lg"></i> Smart Home</a></li>
+                    <li><a href="./smarthome.html"><i class="fas fa-house"></i> Smart Home</a></li>
                 </ul>
             </li>
             <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
-
-        <i class="fas fa-bars hamburger"></i>
+        <i class="fas fa-bars hamburger" aria-label="Toggle menu"></i>
     </nav>
 
+    <!-- Hero Section -->
     <section class="about-page-hero-section">
         <div class="about-page-hero-container">
             <div class="about-page-hero-content">
-                <h1>Welcome to Our Platform</h1>
-                <p class="about-page-hero-subtext">
-                    Discover innovative solutions powered by cutting-edge technology. Join us in shaping the future.
-                </p>
+                <h1>About <span style="color:#00bfff;">Swin Security</span></h1>
+                <p class="about-page-hero-subtext">Dedicated to safeguarding homes, businesses, and industries with cutting-edge security technology and personalized service.</p>
                 <div class="about-page-achievement-badges">
-                    <div class="about-page-badge">
-                        <i class="fas fa-trophy"></i>
-                        <span>10+ Awards Won</span>
-                    </div>
-                    <div class="about-page-badge">
-                        <i class="fas fa-users"></i>
-                        <span>100K+ Users</span>
-                    </div>
-                    <div class="about-page-badge">
-                        <i class="fas fa-rocket"></i>
-                        <span>Fast Growth</span>
-                    </div>
+                    <div class="about-page-badge"><i class="fas fa-briefcase"></i><span>8+ Years of Experience</span></div>
+                    <div class="about-page-badge"><i class="fas fa-award"></i><span>Certified Technicians</span></div>
+                    <div class="about-page-badge"><i class="fas fa-thumbs-up"></i><span>1000+ Projects Completed</span></div>
                 </div>
             </div>
             <div class="about-page-hero-image">
-                <img src="../images/Me wiring.jpg"
-                    alt="Hero Image">
+                <img src="../images/Me wiring.jpg" alt="Swin Security Team at Work">
             </div>
         </div>
     </section>
 
     <!-- CEO Section -->
     <section class="ceo-section">
-        <h2>Meet Our CEO</h2>
+        <h2>Meet Our Founder & CEO</h2>
         <div class="ceo-container">
             <div class="ceo-image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv5T9G-B_94Liv4WQ2W-ulYpOqYM_0Yq6su6KgzQEzHU1InT6k-xEMNQvydTUrtqcPQio&usqp=CAU"
-                    alt="CEO of SwinSecurity">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTv5T9G-B_94Liv4WQ2W-ulYpOqYM_0Yq6su6KgzQEzHU1InT6k-xEMNQvydTUrtqcPQio&usqp=CAU" alt="CEO John Doe - Swin Security">
             </div>
             <div class="ceo-info">
                 <h3>John Doe</h3>
-                <p>
-                    John Doe, the visionary leader of SwinSecurity, brings over 20 years of experience in security
-                    technology. His passion for innovation drives our mission to deliver cutting-edge surveillance
-                    solutions that protect communities and businesses worldwide.
-                </p>
+                <p>John brings over two decades of leadership and hands-on experience in the security industry. His mission is to provide smart, scalable, and reliable protection for every client — whether residential, commercial, or industrial.</p>
             </div>
         </div>
     </section>
 
-    <!-- Certificates Section -->
+    <!-- Certifications Section -->
     <section class="certificates-section">
         <h2>Our Certifications</h2>
+        <p class="cert-intro">We pride ourselves on being certified by leading authorities in security and automation technologies.</p>
         <div class="certificates-container">
-            <div class="certificate-card">
-                <div class="cert-icon">🏅</div>
-                <h3>COA License</h3>
-                <p>Security technician license.</p>
-            </div>
-            <div class="certificate-card">
-                <div class="cert-icon">⭐</div>
-                <h3>Inner Range Integriti Installer</h3>
-                <p>Certified installer for Inner Range systems.</p>
-            </div>
-            <div class="certificate-card">
-                <div class="cert-icon">✅</div>
-                <h3>ICT Protoge GX Access Technician</h3>
-                <p>Certified for ICT Protoge GX systems.</p>
-            </div>
-            <div class="certificate-card">
-                <div class="cert-icon">🎖️</div>
-                <h3>Paradox MG/SP Alarm Installer</h3>
-                <p>Certified alarm installer for Paradox systems.</p>
-            </div>
-            <div class="certificate-card">
-                <div class="cert-icon">🛠️</div>
-                <h3>Bosch Alarm Installer</h3>
-                <p>Certified Bosch alarm system installer.</p>
-            </div>
+            <div class="certificate-card"><div class="cert-icon">📜</div><h3>COA License</h3><p>Certified security technician license for trusted operations.</p></div>
+            <div class="certificate-card"><div class="cert-icon">🔒</div><h3>Inner Range Integriti</h3><p>Certified installer of advanced access systems.</p></div>
+            <div class="certificate-card"><div class="cert-icon">⚙️</div><h3>ICT Protoge GX</h3><p>Expertise in access control configurations and deployment.</p></div>
+            <div class="certificate-card"><div class="cert-icon">🛎️</div><h3>Paradox MG/SP</h3><p>Trained alarm system integration specialist.</p></div>
+            <div class="certificate-card"><div class="cert-icon">🏆</div><h3>Bosch Certified</h3><p>Approved installer of Bosch alarm technologies.</p></div>
         </div>
     </section>
 
-
-    <!-- <section class="about-page-features-section">
-        <h2 class="about-page-features-heading">Our Features</h2>
-        <div class="about-page-features-grid">
-            <div class="about-page-feature-card">
-                <i class="fas fa-bolt"></i>
-                <h3>Lightning Fast</h3>
-                <p>Experience unparalleled speed with our optimized platform.</p>
-            </div>
-            <div class="about-page-feature-card">
-                <i class="fas fa-shield-alt"></i>
-                <h3>Secure</h3>
-                <p>Your data is protected with state-of-the-art security measures.</p>
-            </div>
-            <div class="about-page-feature-card">
-                <i class="fas fa-globe"></i>
-                <h3>Global Reach</h3>
-                <p>Connect with users worldwide through our scalable infrastructure.</p>
-            </div>
-        </div>
-    </section> -->
-
+    <!-- Footer -->
     <footer class="footer-section">
         <div class="footer-container">
-            <!-- Company Info -->
             <div class="footer-column">
                 <h3>Swin Security</h3>
                 <p>Protecting your world with cutting-edge security solutions.</p>
@@ -150,7 +99,6 @@
                 <p>Phone: +1 (800) 123-4567</p>
                 <p>Address: 123 Secure St, Safety City, SC 12345</p>
             </div>
-            <!-- Quick Links -->
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul>
@@ -158,11 +106,9 @@
                     <li><a href="../index.html#ourSolution">Our Solutions</a></li>
                     <li><a href="../index.html#whyUs">Why Choose Us</a></li>
                     <li><a href="../index.html#ourPartners">Technology Partners</a></li>
-                    <li><a href="../pages/contact.html">Contact Us</a></li>
+                    <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
             </div>
-            <!-- Social Media -->
-            <!-- Social Media -->
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
@@ -172,7 +118,11 @@
                 </div>
             </div>
         </div>
+        <div class="footer-company-text">
+            <p>Website developed by <span>PAHASP Software Services Pvt. Ltd.</span></p>
+        </div>
     </footer>
+
     <script src="../js/main.js"></script>
 </body>
 
