--- a/pages/accesscontrol.html
+++ b/pages/accesscontrol.html
@@ -4,7 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Control</title>
+    <title>Top Access Control Systems | Swin Security</title>
+    
+    <!-- SEO Meta -->
+    <meta name="description" content="Discover advanced access control systems by Swin Security. Scalable, secure, and integrated solutions for modern security needs.">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Top Access Control Systems | Swin Security">
+    <meta property="og:description" content="Secure your property with our cutting-edge access control systems. Easy integration and remote monitoring.">
+    <meta property="og:image" content="https://yoursite.com/images/access-control.jpg">
+    <meta property="og:url" content="https://yoursite.com/pages/accesscontrol.html">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Top Access Control Systems | Swin Security">
+    <meta name="twitter:description" content="Discover AI-powered access control. Scalable and secure solutions for your property.">
+    <meta name="twitter:image" content="https://yoursite.com/images/access-control.jpg">
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,17 +31,19 @@
 </head>
 
 <body>
+    <!-- Navigation -->
     <nav class="navbar">
         <div class="logo">
-            <img src="../images/Swin_security.webp" alt="Swin Security" height="60">
+            <img src="../images/Swin_security.webp" alt="Swin Security Logo" height="60" loading="lazy">
         </div>
 
         <ul class="nav-links">
             <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
-                        class="fas fa-chevron-down"></i></a>
+                <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i>
+                </a>
                 <ul class="dropdown-menu">
                     <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
@@ -38,42 +58,41 @@
         <i class="fas fa-bars hamburger"></i>
     </nav>
 
-
-
+    <!-- Hero Section -->
     <section class="access-control-page">
         <div class="access-control-hero">
-            <i class="fas fa-lock"></i> 
+            <i class="fas fa-lock"></i>
             <h1>Top Access Control Systems</h1>
-            <p>We provide the latest and most secure access control systems to meet your security needs. Partnering with
-                trusted brands to deliver scalable and reliable solutions.</p>
+            <p>We provide the latest and most secure access control systems to meet your security needs. Partnering with trusted brands to deliver scalable and reliable solutions.</p>
         </div>
+
+        <!-- Feature Cards -->
         <div class="access-control-features">
             <div class="access-control-feature-card">
                 <img src="https://media.istockphoto.com/id/1379911608/photo/concept-digital-technology-4-0-wireless-network-5g-signal-cctv-camera-surveillance.jpg?s=612x612&w=0&k=20&c=gyX9NwO2_7RtsuJIIX54tz6HdcmOXIBpB_WoM6P922s="
-                    alt="AI Camera">
-                <h3>Advanced Security</h3>
-                <p>Our access control systems offer the latest in security technology, protecting your assets with
-                    robust encryption and reliable authentication methods.</p>
-                <a href="#learn-more">Learn More</a>
+                    alt="AI-enabled security camera in surveillance setup" loading="lazy">
+                <h2>Advanced Security</h2>
+                <p>Our access control systems offer the latest in security technology, protecting your assets with robust encryption and reliable authentication methods.</p>
+                <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
             </div>
             <div class="access-control-feature-card">
                 <img src="https://media.istockphoto.com/id/2182751072/photo/businessman-pointing-icon-with-smart-devices-connectivity-automation-real-time-data-machine.jpg?s=612x612&w=0&k=20&c=ZCIQvRma7oPILpunGuZSWKsoi-P4WcUpR7ocNnfxy4k="
-                    alt="AI Analytics">
-                <h3>Easy Integration</h3>
-                <p>Seamlessly integrate with your existing infrastructure, ensuring that your access control system fits
-                    perfectly within your security setup.</p>
-                <a href="#learn-more">Learn More</a>
+                    alt="AI analytics integration and cloud dashboard" loading="lazy">
+                <h2>Easy Integration</h2>
+                <p>Seamlessly integrate with your existing infrastructure, ensuring that your access control system fits perfectly within your security setup.</p>
+                <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
             </div>
             <div class="access-control-feature-card">
                 <img src="https://media.istockphoto.com/id/502462262/photo/cloud-computing.jpg?s=612x612&w=0&k=20&c=mNq94Zu3RXr9QIsW7kUMe9BedXPV_62lmOxCcqJhI0s="
-                    alt="Cloud Integration">
-                <h3>Remote Access</h3>
-                <p>Control and monitor your access control systems remotely, providing you with flexibility and control
-                    from anywhere in the world.</p>
-                <a href="#learn-more">Learn More</a>
+                    alt="Cloud-based access control interface" loading="lazy">
+                <h2>Remote Access</h2>
+                <p>Control and monitor your access control systems remotely, providing you with flexibility and control from anywhere in the world.</p>
+                <a href="https://wa.me/+91224855700" target="_blank">Learn More</a>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
     <footer class="footer-section">
         <div class="footer-container">
             <!-- Company Info -->
@@ -84,6 +103,7 @@
                 <p>Phone: +1 (800) 123-4567</p>
                 <p>Address: 123 Secure St, Safety City, SC 12345</p>
             </div>
+
             <!-- Quick Links -->
             <div class="footer-column">
                 <h3>Quick Links</h3>
@@ -95,18 +115,20 @@
                     <li><a href="../pages/contact.html">Contact Us</a></li>
                 </ul>
             </div>
-            <!-- Social Media -->
+
             <!-- Social Media -->
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Twitter"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
+
+    <!-- JS -->
     <script src="../js/main.js"></script>
 </body>
 
