--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,28 +2,44 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact Us | Swin Security</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Get in touch with Swin Security for expert advice, support, and customized security solutions. We're here to help." />
+
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Contact Swin Security" />
+    <meta property="og:description" content="Speak to our team of experts for custom security solutions and support." />
+    <meta property="og:image" content="https://media.istockphoto.com/id/613225608/photo/customer-service-support.jpg" />
+    <meta property="og:url" content="https://yoursite.com/pages/contact.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contact Swin Security" />
+    <meta name="twitter:description" content="Need help? Reach out to Swin Security for tailored support and service." />
+    <meta name="twitter:image" content="https://media.istockphoto.com/id/613225608/photo/customer-service-support.jpg" />
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/critical.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>contact us</title>
+        integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../css/critical.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
-    <nav class="navbar">
+    <nav class="navbar" role="navigation" aria-label="Main Navigation">
         <div class="logo">
-            <img src="../images/Swin_security.webp" alt="Swin Security" height="60">
+            <img src="../images/Swin_security.webp" alt="Swin Security logo" height="60" loading="lazy" />
         </div>
 
         <ul class="nav-links">
             <li><a href="../index.html"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="./about.html"><i class="fas fa-users"></i> About Us</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle"><i class="fas fa-cogs"></i>Our Solutions <i
-                        class="fas fa-chevron-down"></i></a>
+                <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cogs"></i> Our Solutions <i class="fas fa-chevron-down"></i></a>
                 <ul class="dropdown-menu">
                     <li><a href="./gateautomation.html"><i class="fa-solid fa-window-maximize"></i> Gate Automation</a></li>
                     <li><a href="./alarmsystem.html"><i class="fas fa-bell"></i> Alarm System</a></li>
@@ -35,8 +51,9 @@
             <li><a href="./contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
 
-        <i class="fas fa-bars hamburger"></i>
+        <i class="fas fa-bars hamburger" aria-label="Open menu"></i>
     </nav>
+
     <!-- Contact Hero Section -->
     <section class="contact-page-hero-section">
         <div class="contact-page-hero-container">
@@ -46,28 +63,27 @@
 
                 <div class="contact-page-info-container">
                     <div class="contact-page-info-item">
-                        <i class="fas fa-phone-alt contact-page-info-icon"></i>
+                        <i class="fas fa-phone-alt contact-page-info-icon" aria-hidden="true"></i>
                         <div class="contact-page-info-details">
                             <h3 class="contact-page-info-title">Emergency Support</h3>
-                            <a href="tel:+1234567890" class="contact-page-info-link">+1 (234) 567-890</a>
+                            <a href="tel:+1234567890" class="contact-page-info-link" aria-label="Call emergency support">+1 (234) 567-890</a>
                         </div>
                     </div>
 
                     <div class="contact-page-info-item">
-                        <i class="fas fa-envelope contact-page-info-icon"></i>
+                        <i class="fas fa-envelope contact-page-info-icon" aria-hidden="true"></i>
                         <div class="contact-page-info-details">
                             <h3 class="contact-page-info-title">Email Address</h3>
-                            <a href="mailto:support@security.com"
-                                class="contact-page-info-link">support@security.com</a>
+                            <a href="mailto:support@security.com" class="contact-page-info-link" aria-label="Send an email to support">support@security.com</a>
                         </div>
                     </div>
 
                     <div class="contact-page-info-item">
-                        <i class="fas fa-map-marker-alt contact-page-info-icon"></i>
+                        <i class="fas fa-map-marker-alt contact-page-info-icon" aria-hidden="true"></i>
                         <div class="contact-page-info-details">
                             <h3 class="contact-page-info-title">Visit Us</h3>
                             <address class="contact-page-address">
-                                123 Cyber Security Lane<br>
+                                123 Cyber Security Lane<br />
                                 Tech Valley, DV 45678
                             </address>
                         </div>
@@ -76,21 +92,22 @@
             </div>
             <div class="contact-page-hero-image">
                 <img src="https://media.istockphoto.com/id/613225608/photo/customer-service-support.jpg?s=612x612&w=0&k=20&c=8EfYiSY8HwsmRpiaeYLLt4H2rn5gpyMUbpQC1Q18lZQ="
-                    alt="Security consultation" class="contact-page-hero-img">
+                    alt="Customer support representative at Swin Security" class="contact-page-hero-img" loading="lazy" />
             </div>
         </div>
     </section>
 
-    <footer class="footer-section">
+    <footer class="footer-section" role="contentinfo">
         <div class="footer-container">
             <!-- Company Info -->
             <div class="footer-column">
                 <h3>Swin Security</h3>
                 <p>Protecting your world with cutting-edge security solutions.</p>
-                <p>Email: info@swinsecurity.com</p>
-                <p>Phone: +1 (800) 123-4567</p>
+                <p>Email: <a href="mailto:info@swinsecurity.com">info@swinsecurity.com</a></p>
+                <p>Phone: <a href="tel:+18001234567">+1 (800) 123-4567</a></p>
                 <p>Address: 123 Secure St, Safety City, SC 12345</p>
             </div>
+
             <!-- Quick Links -->
             <div class="footer-column">
                 <h3>Quick Links</h3>
@@ -99,21 +116,22 @@
                     <li><a href="../index.html#ourSolution">Our Solutions</a></li>
                     <li><a href="../index.html#whyUs">Why Choose Us</a></li>
                     <li><a href="../index.html#ourPartners">Technology Partners</a></li>
-                    <li><a href="../pages/contact.html">Contact Us</a></li>
+                    <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
             </div>
-            <!-- Social Media -->
+
             <!-- Social Media -->
             <div class="footer-column">
                 <h3>Follow Us</h3>
                 <div class="footer-social">
-                    <a href="https://twitter.com" title="Twitter"><i class="fab fa-x-twitter"></i></a>
-                    <a href="https://linkedin.com" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="https://facebook.com" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" title="Twitter" target="_blank" rel="noopener"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://linkedin.com" title="LinkedIn" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://facebook.com" title="Facebook" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
         </div>
     </footer>
+
     <script src="../js/main.js"></script>
 </body>
 
